# Nifties-server

./: .gitignore  Cargo.toml  README.md  Rocket.toml  log4rs.yaml
src/: main.rs
src/constant/: mod.rs
src/controller/: common_controller.rs  event_controller.rs  grants_controller.rs  hackathon_controller.rs  login_controller.rs  mod.rs  test_controller.rs  twitter_controller.rs
src/model/: common_model.rs  event_model.rs  grants_model.rs  hackathon_model.rs  mod.rs  test_model.rs  twitter_model.rs
src/service/: common_service.rs  event_service.rs  grants_service.rs  hackathon_service.rs  mod.rs  test_service.rs  twitter_service.rs
src/utils/: mod.rs  sha256.rs  util.rs
